--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
     input, select, button { margin: 5px; padding: 6px; }
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 8px; }
-    hr { margin: 30px 0; }
+    th { background:#f0f0f0; }
   </style>
 </head>
 <body>
 
 <h2>예비품 재고 관리</h2>
 
-<!-- 검색 -->
 <input id="search" placeholder="예비품명 검색" />
 <button onclick="loadParts()">검색</button>
 
 <hr />
 
-<!-- 입고 등록 -->
-<h3>입고 등록</h3>
+<h3>입고</h3>
 
 <select id="main_category" onchange="updateMidCategory()">
   <option value="">대분류 선택</option>
@@ -44,22 +42,20 @@
 
 <hr />
 
-<!-- 출고 등록 -->
-<h3>출고 등록</h3>
+<h3>출고</h3>
 
-<select id="out_part_select">
+<select id="out_part_id">
   <option value="">출고 예비품 선택</option>
 </select>
 
 <input id="out_quantity" type="number" placeholder="출고 수량" />
-<input id="out_location" placeholder="출고 위치" />
 <input id="out_note" placeholder="비고" />
 
-<button onclick="saveOut()">출고 등록</button>
+<button onclick="outPart()">출고 처리</button>
 
 <hr />
 
-<!-- 재고 목록 -->
+<h3>현재 재고</h3>
 <table>
   <thead>
     <tr>
@@ -67,20 +63,37 @@
       <th>중분류</th>
       <th>예비품명</th>
       <th>수량</th>
-      <th>보관 위치</th>
+      <th>보관위치</th>
       <th>비고</th>
     </tr>
   </thead>
   <tbody id="list"></tbody>
 </table>
 
-<script>
-  /* ===== Supabase 연결 ===== */
-  const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
-  const SUPABASE_KEY = "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y";
-  const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+<hr />
 
-  /* ===== 분류 ===== */
+<h3>출고 이력</h3>
+<table>
+  <thead>
+    <tr>
+      <th>출고일</th>
+      <th>대분류</th>
+      <th>중분류</th>
+      <th>예비품명</th>
+      <th>출고수량</th>
+      <th>비고</th>
+    </tr>
+  </thead>
+  <tbody id="out_log_list"></tbody>
+</table>
+
+<script>
+/* ===== Supabase ===== */
+const SUPABASE_URL = "https://tgkwhchuoxuvitnsaqjo.supabase.co";
+const SUPABASE_KEY = "sb_publishable_EhWgQhfjCTAdrWTQRUPYKg_c-UU2m2y";
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+/* ===== 분류 ===== */
 const CATEGORIES = {
   "반입및전처리설비": ["반입장", "호퍼 자동개폐기", "음식물 배출컨베이어", "음식물 이송컨베이어", "음식물 공급컨베이어", "협잡물 이송컨베이어", "1차 파쇄기", "가용화조", "가용화조 블로워", "음폐수저장조#A", "음폐수저장조#B", "음폐수저장조 교반기", "중간저장조", "중간저장조 교반기", "슬러리 이송펌프", "음폐수 이송펌프", "유압유니트", "드럼스크린", "드럼스크린 테이퍼스크류", "회전분쇄공급기", "미세분쇄기"],
     "혐기성소화설비": ["혐기성소화조", "가스저장조", "안정화조", "안정화조 교반기", "임펄스펌프", "소화슬러지 이송펌프", "소화액반송펌프", "열교환순환펌프", "침전물배출펌프", "가온순환펌프", "공기압축기"],
@@ -90,108 +103,152 @@ const CATEGORIES = {
     "악취제거설비": ["고농도 탈취기", "고농도 탈취팬", "고농도 순환펌프", "중저농도 탈취기", "중저농도 탈취팬", "중저농도 순환펌프", "RTO 설비"],
     "기타설비": ["공정수조", "지하수조", "소방수조", "공정수 부스터 펌프", "지하수 부스터 펌프", "소방펌프", "소방설비", "압롤박스실", "SUMP#1", "SUMP#2", "SUMP#3", "SUMP#4", "SUMP#5", "SUMP#6", "기계설비실", "배수로", "시설동", "소화동", "비상저류조", "기타"]
 };
-
-  function loadMainCategory() {
-    main_category.innerHTML = '<option value="">대분류 선택</option>';
-    for (const k in CATEGORIES) {
-      main_category.innerHTML += `<option value="${k}">${k}</option>`;
-    }
+  
+/* 대분류 */
+function loadMainCategory() {
+  const sel = document.getElementById("main_category");
+  for (const k in CATEGORIES) {
+    sel.innerHTML += `<option value="${k}">${k}</option>`;
   }
+}
 
-  function updateMidCategory() {
-    const main = main_category.value;
-    mid_category.innerHTML = '<option value="">중분류 선택</option>';
-    if (!main) return;
-    CATEGORIES[main].forEach(m => {
-      mid_category.innerHTML += `<option value="${m}">${m}</option>`;
-    });
-  }
+/* 중분류 */
+function updateMidCategory() {
+  const main = main_category.value;
+  const mid = mid_category;
+  mid.innerHTML = '<option value="">중분류 선택</option>';
+  if (!main) return;
+  CATEGORIES[main].forEach(m => {
+    mid.innerHTML += `<option value="${m}">${m}</option>`;
+  });
+}
 
-  /* ===== 재고 조회 ===== */
-  async function loadParts() {
-    const keyword = search.value;
-    let q = sb.from("spare_parts").select("*").order("created_at", { ascending: false });
-    if (keyword) q = q.ilike("part_name", `%${keyword}%`);
+/* 재고 조회 */
+async function loadParts() {
+  const keyword = search.value;
+  let q = sb.from("spare_parts").select("*").order("created_at", { ascending:false });
+  if (keyword) q = q.ilike("part_name", `%${keyword}%`);
+  const { data } = await q;
+  list.innerHTML = "";
+  data.forEach(r => {
+    list.innerHTML += `
+      <tr>
+        <td>${r.main_category}</td>
+        <td>${r.mid_category}</td>
+        <td>${r.part_name}</td>
+        <td>${r.quantity}</td>
+        <td>${r.location}</td>
+        <td>${r.note ?? ""}</td>
+      </tr>`;
+  });
+}
 
-    const { data, error } = await q;
-    if (error) return alert(error.message);
+/* 입고 */
+async function savePart() {
+  const row = {
+    main_category: main_category.value,
+    mid_category: mid_category.value,
+    part_name: part_name.value,
+    quantity: Number(quantity.value),
+    location: location.value,
+    note: note.value
+  };
 
-    list.innerHTML = "";
-    data.forEach(r => {
-      list.innerHTML += `
-        <tr>
-          <td>${r.main_category}</td>
-          <td>${r.mid_category}</td>
-          <td>${r.part_name}</td>
-          <td>${r.quantity}</td>
-          <td>${r.location}</td>
-          <td>${r.note ?? ""}</td>
-        </tr>`;
-    });
+  const { error } = await sb.from("spare_parts").insert([row]);
+  if (error) return alert(error.message);
 
-    loadOutDropdown(data);
-  }
-
-  /* ===== 출고 드롭다운 채우기 ===== */
-  function loadOutDropdown(parts) {
-    out_part_select.innerHTML = '<option value="">출고 예비품 선택</option>';
-
-    const unique = [...new Set(parts.map(p => p.part_name))];
-    unique.forEach(name => {
-      out_part_select.innerHTML += `<option value="${name}">${name}</option>`;
-    });
-  }
-
-  /* ===== 입고 ===== */
-  async function savePart() {
-    const row = {
-      main_category: main_category.value,
-      mid_category: mid_category.value,
-      part_name: part_name.value,
-      quantity: Number(quantity.value),
-      location: location.value,
-      note: note.value
-    };
-
-    if (!row.main_category || !row.mid_category || !row.part_name) {
-      alert("입고 항목을 모두 입력하세요");
-      return;
-    }
-
-    const { error } = await sb.from("spare_parts").insert([row]);
-    if (error) alert(error.message);
-    else {
-      alert("입고 저장 완료");
-      loadParts();
-    }
-  }
-
-  /* ===== 출고 등록 ===== */
-  async function saveOut() {
-    const row = {
-      part_name: out_part_select.value,
-      quantity: Number(out_quantity.value),
-      location: out_location.value,
-      note: out_note.value
-    };
-
-    if (!row.part_name || !row.quantity) {
-      alert("출고 예비품과 수량을 입력하세요");
-      return;
-    }
-
-    const { error } = await sb.from("spare_parts_logs").insert([row]);
-    if (error) alert(error.message);
-    else {
-      alert("출고 등록 완료");
-      out_quantity.value = "";
-      out_location.value = "";
-      out_note.value = "";
-    }
-  }
-
-  loadMainCategory();
+  alert("입고 완료");
   loadParts();
+  loadOutParts();
+}
+
+/* 출고 목록 */
+async function loadOutParts() {
+  const sel = out_part_id;
+  sel.innerHTML = '<option value="">출고 예비품 선택</option>';
+  const { data } = await sb
+    .from("spare_parts")
+    .select("id, main_category, mid_category, part_name, quantity")
+    .gt("quantity", 0);
+
+  data.forEach(p => {
+    sel.innerHTML += `<option value="${p.id}">
+      ${p.part_name} (${p.main_category}/${p.mid_category}) [재고:${p.quantity}]
+    </option>`;
+  });
+}
+
+/* 출고 처리 */
+async function outPart() {
+  const id = Number(out_part_id.value);
+  const qty = Number(out_quantity.value);
+  const note = out_note.value;
+
+  if (!id || qty <= 0) {
+    alert("출고할 예비품과 수량을 입력하세요.");
+    return;
+  }
+
+  const { data: stock } = await sb
+    .from("spare_parts")
+    .select("quantity, main_category, mid_category, part_name")
+    .eq("id", id)
+    .single();
+
+  if (stock.quantity < qty) {
+    alert("재고 부족");
+    return;
+  }
+
+  await sb.from("spare_parts")
+    .update({ quantity: stock.quantity - qty })
+    .eq("id", id);
+
+  await sb.from("spare_parts_logs").insert([
+    {
+      part_id: id,
+      type: "OUT",
+      quantity: qty,
+      note: note,
+      main_category: stock.main_category,
+      mid_category: stock.mid_category,
+      part_name: stock.part_name
+    }
+  ]);
+
+  alert("출고 완료");
+  loadParts();
+  loadOutParts();
+  loadOutLogs();
+}
+
+/* 출고 이력 */
+async function loadOutLogs() {
+  const { data } = await sb
+    .from("spare_parts_logs")
+    .select("*")
+    .eq("type", "OUT")
+    .order("created_at", { ascending:false });
+
+  out_log_list.innerHTML = "";
+  data.forEach(r => {
+    out_log_list.innerHTML += `
+      <tr>
+        <td>${new Date(r.created_at).toLocaleString()}</td>
+        <td>${r.main_category}</td>
+        <td>${r.mid_category}</td>
+        <td>${r.part_name}</td>
+        <td>${r.quantity}</td>
+        <td>${r.note ?? ""}</td>
+      </tr>`;
+  });
+}
+
+/* 최초 실행 */
+loadMainCategory();
+loadParts();
+loadOutParts();
+loadOutLogs();
 </script>
 
 </body>
