--- a/index.html
+++ b/index.html
@@ -7,11 +7,91 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    input, select, button { margin: 5px; padding: 6px; }
-    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; }
-    th { background:#f0f0f0; }
+<style>
+/* 전체 */
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: #f5f7fb;
+  padding: 20px;
+  color: #111827;
+}
+
+/* 제목 */
+h2 {
+  margin-bottom: 10px;
+}
+h3 {
+  margin-top: 30px;
+  border-left: 5px solid #2563eb;
+  padding-left: 10px;
+}
+
+/* 입력 영역 */
+input, select {
+  padding: 8px 10px;
+  border: 1px solid #d1d5db;
+  border-radius: 6px;
+  margin: 5px;
+  min-width: 150px;
+}
+
+/* 버튼 */
+button {
+  padding: 8px 14px;
+  background: #2563eb;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #1e40af;
+}
+
+/* 구분선 */
+hr {
+  border: none;
+  border-top: 1px solid #e5e7eb;
+  margin: 30px 0;
+}
+
+/* 테이블 */
+table {
+  border-collapse: collapse;
+  width: 100%;
+  background: white;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-top: 10px;
+}
+
+th {
+  background: #f3f4f6;
+  font-weight: bold;
+}
+
+th, td {
+  padding: 10px;
+  border-bottom: 1px solid #e5e7eb;
+  text-align: left;
+}
+
+/* 행 hover */
+tbody tr:hover {
+  background: #eef2ff;
+}
+
+/* 출고 강조 (나중에 쓸 용도) */
+.out {
+  color: #dc2626;
+  font-weight: bold;
+}
+
+.in {
+  color: #2563eb;
+  font-weight: bold;
+}
 
     /* ===== 입·출고 색상 ===== */
     .type-in {
