--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ tbody tr:hover {
 
   <div class="company">
     <!-- 로고 이미지가 있으면 사용 -->
-    <!-- <img src="logo.png" alt="회사 로고"> -->
+    <img src="logo.jpg" alt="회사 로고">
     <div class="company-name">대전도시공사</div>
   </div>
 </div>
